# PortalFrame-Design

./: .gitignore  CLAUDE.md  Trying.txt  build.spec  example_portal_frame.json  portal_frame_generator.py  portal_frame_gui.py  pyproject.toml  test_default.txt  test_eq_with_wind.txt  test_jl_5col.txt  test_jointloads.txt
.claude/: settings.json  settings.local.json
Examples/: 1.SGS Portal Frame Wind Pressure 2D frame.xlsm  SGS exported example.TXT
docs/: CFS_Span_Table.xlsx  Structural analysis solver research.md
portal_frame/: __init__.py  cli.py  run_gui.py
portal_frame/analysis/: combinations.py  results.py  station_interp.py
portal_frame/gui/: __init__.py  analysis_runner.py  app.py  diagram_controller.py  dialogs.py  member_popout.py  persistence.py  preview.py  theme.py  widgets.py  wind_generator.py
portal_frame/io/: __init__.py  config.py  reactions_csv.py  section_library.py  spacegass_writer.py
portal_frame/models/: __init__.py  crane.py  geometry.py  loads.py  sections.py  supports.py  validation.py
portal_frame/solvers/: __init__.py  base.py  pynite_solver.py  spacegass.py
portal_frame/standards/: __init__.py  cfs_check.py  cfs_span_table.py  combinations_nzs1170_0.py  earthquake_nzs1170_5.py  serviceability.py  utils.py  wind_nzs1170_2.py
tests/: test_cfs_check.py  test_crane.py  test_envelope_reactions.py  test_models.py  test_output.py  test_partial_base_fixity.py  test_preview.py  test_pynite_solver.py  test_reactions_csv.py  test_serviceability.py  test_standards.py  test_station_interp.py  test_widgets.py
(+40 files in other folders)
